# RODI

./: .gitignore  README.md  build_and_run.sh  frames_2026-06-19_17.02.38.gv  install_deps.sh
docs/: vision_pipeline.md
src/myrobot/: CMakeLists.txt  mart  package.xml
src/myrobot/config/: nav2_params.yaml  patrol_waypoints.yaml
src/myrobot/launch/: my_world.launch.py  nav2.launch.py  vision.launch.py
src/myrobot/maps/: fix_map.py  fixed.pgm  mart_map.pgm  mart_map.yaml
src/myrobot/models/child_walking/: model.config  model.sdf
src/myrobot/models/person_adult_1/: model.config  model.sdf
src/myrobot/models/person_adult_1/materials/scripts/: person_adult_1.material
src/myrobot/models/person_adult_2/: model.config  model.sdf
src/myrobot/models/person_adult_3/: model.config  model.sdf
src/myrobot/models/person_child_1/: model.config  model.sdf
src/myrobot/models/person_child_2/: model.config  model.sdf
src/myrobot/models/person_child_3/: model.config  model.sdf
src/myrobot/models/person_senior_1/: model.config  model.sdf
src/myrobot/rivz/: mart_nav2.rviz  mart_slam.rviz
src/myrobot/scripts/: generate_person_textures.py
src/myrobot/urdf/: my_robot.urdf
src/myrobot/worlds/: mart.world
src/myrobot_vision/: package.xml  setup.cfg  setup.py
src/myrobot_vision/myrobot_vision/: auto_mapper_node.py  child_detector_node.py  child_response_node.py  guardian_logic_node.py  image_overlay_node.py  model_mover_node.py  patrol_node.py  test_image_publisher.py  tts_node.py  tts_utils.py
(+6 files in other folders)
